--- a/dashboard.html
+++ b/dashboard.html
@@ -7,8 +7,51 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="header"></div>
-    <div class="dashboard"></div>
-    <div class="main"></div>
+    <div class="header">
+      <input />
+      <div>notification bell</div>
+      <div>prof pic</div>
+      <div>Ray Lopez</div>
+      <div>bigger prof pic</div>
+      <div>Hi there, Ray Lopez (@ray)</div>
+      <button>New</button>
+      <button>Upload</button>
+      <button>Share</button>
+    </div>
+    <div class="dashboard">
+      <div>Dashboard</div>
+      <ul>
+        <li>Home</li>
+        <li>Profile</li>
+        <li>Messages</li>
+        <li>History</li>
+        <li>Tasks</li>
+        <li>Communities</li>
+      </ul>
+
+      <ul>
+        <li>Settings</li>
+        <li>Support</li>
+        <li>Privacy</li>
+      </ul>
+    </div>
+    <div class="main">
+      <div>Your Projects</div>
+      <div>Project 1</div>
+      <div>Project 2</div>
+      <div>Project 3</div>
+      <div>Project 4</div>
+      <div>Project 5</div>
+      <div>Project 6</div>
+      <div>Annoucments</div>
+      <div>Annoucment 1</div>
+      <div>Annoucment 2</div>
+      <div>Annoucment 3</div>
+      <div>Trending</div>
+      <div>@name1</div>
+      <div>@name2</div>
+      <div>@name3</div>
+      <div>@name4</div>
+    </div>
   </body>
 </html>
