Added classes for main
Added class names for main section of site so that the section can be arranged

--- a/dashboard.html
+++ b/dashboard.html
@@ -9,15 +9,30 @@
   <body>
     <div class="container">
       <div class="header">
-        <input />
-        <div>notification bell</div>
-        <div>prof pic</div>
-        <div>Ray Lopez</div>
-        <div>bigger prof pic</div>
-        <div>Hi there, Ray Lopez (@ray)</div>
-        <button>New</button>
-        <button>Upload</button>
-        <button>Share</button>
+        <div class="header-top">
+          <div class="header-top-search">
+            <img src="search.svg">
+            <!-- <div>magnifying glass</div> -->
+            <input />
+          </div>
+          <div class="header-top-profile">
+            <img src="bell.svg">
+            <!-- <div>notification bell</div> -->
+            <div>prof pic</div>
+            <div>Ray Lopez</div>
+          </div>
+        </div>
+        <div class="header-bottom">
+          <div class="header-bottom-profile">
+            <div>bigger prof pic</div>
+            <div>Hi there, Ray Lopez (@ray)</div>
+          </div>
+          <div class="header-bottom-buttons">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+          </div>
+        </div>
       </div>
       <div class="dashboard">
         <div>Dashboard</div>
@@ -36,22 +51,28 @@
         </ul>
       </div>
       <div class="main">
-        <div>Your Projects</div>
-        <div>Project 1</div>
-        <div>Project 2</div>
-        <div>Project 3</div>
-        <div>Project 4</div>
-        <div>Project 5</div>
-        <div>Project 6</div>
-        <div>Annoucments</div>
-        <div>Annoucment 1</div>
-        <div>Annoucment 2</div>
-        <div>Annoucment 3</div>
-        <div>Trending</div>
-        <div>@name1</div>
-        <div>@name2</div>
-        <div>@name3</div>
-        <div>@name4</div>
+        <div class="projects">
+          <div>Your Projects</div>
+          <div>Project 1</div>
+          <div>Project 2</div>
+          <div>Project 3</div>
+          <div>Project 4</div>
+          <div>Project 5</div>
+          <div>Project 6</div>
+        </div>
+        <div class="announcements">
+          <div>Annoucements</div>
+          <div>Annoucement 1</div>
+          <div>Annoucement 2</div>
+          <div>Annoucement 3</div>
+        </div>
+        <div class="trending">
+          <div>Trending</div>
+          <div>@name1</div>
+          <div>@name2</div>
+          <div>@name3</div>
+          <div>@name4</div>
+        </div>
       </div>
     </div>
   </body>
