Added font and filler info onto dashboard.html
Added Inter font
Added filler info for the projects, announcements, and trending sections
Also added more tags so i can move them around in grid

--- a/dashboard.html
+++ b/dashboard.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dashboard.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
   </head>
   <body>
@@ -52,26 +55,105 @@
       </div>
       <div class="main">
         <div class="projects">
-          <div>Your Projects</div>
-          <div>Project 1</div>
-          <div>Project 2</div>
-          <div>Project 3</div>
-          <div>Project 4</div>
-          <div>Project 5</div>
-          <div>Project 6</div>
+          <h1>Your Projects</h1>
+          <div class="project-card-container">
+            <div class="project-card">
+              <div>Project 1</div>
+              <div>Lorem ipsum odor amet, consectetuer adipiscing elit. Per et ex dui eleifend bibendum gravida odio, accumsan nibh.</div>
+              <div class="project-links">
+                <div>star</div>
+                <div>watch</div>
+                <div>link</div>
+              </div>
+            </div>
+            <div class="project-card">
+              <div>Project 2</div>
+              <div>Praesent a venenatis arcu, vitae imperdiet quam. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </div>
+              <div class="project-links">
+                <div>star</div>
+                <div>watch</div>
+                <div>link</div>
+              </div>
+            </div>
+            <div class="project-card">
+              <div>Project 3</div>
+              <div>Ut id magna non mi mollis rutrum eu eget nisi. Ut quis risus ante. Pellentesque id enim a dolor luctus laoreet quis quis quam.</div>
+              <div class="project-links">
+                <div>star</div>
+                <div>watch</div>
+                <div>link</div>
+              </div>
+            </div>
+            <div class="project-card">
+              <div>Project 4</div>
+              <div>Nunc ut pulvinar mauris. Curabitur ac sagittis sapien, in dignissim tortor.</div>
+              <div class="project-links">
+                <div>star</div>
+                <div>watch</div>
+                <div>link</div>
+              </div>
+            </div>
+            <div class="project-card">
+              <div>Project 5</div>
+              <div>Curabitur tristique sodales velit, quis feugiat lacus suscipit nec. Suspendisse vitae mattis ante.</div>
+              <div class="project-links">
+                <div>star</div>
+                <div>watch</div>
+                <div>link</div>
+              </div>
+            </div>
+            <div class="project-card">
+              <div>Project 6</div>
+              <div>Maecenas sit amet vestibulum dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</div>
+              <div class="project-links">
+                <div>star</div>
+                <div>watch</div>
+                <div>link</div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="announcements">
           <div>Annoucements</div>
-          <div>Annoucement 1</div>
-          <div>Annoucement 2</div>
-          <div>Annoucement 3</div>
+          <div class="announcement-container">
+            <div>
+              <h1>Annoucement 1</h1>
+              <p>Morbi dapibus vitae elit non vestibulum.</p>
+            </div>
+            <div>
+              <h1>Annoucement 2</h1>
+              <p>Aenean semper mi in erat eleifend vestibulum.</p>
+            </div>
+            <div>
+              <h1>Annoucement 3</h1>
+              <p>Quisque laoreet ligula et velit consectetur consequat.</p>
+            </div>
+          </div>
         </div>
         <div class="trending">
-          <div>Trending</div>
-          <div>@name1</div>
-          <div>@name2</div>
-          <div>@name3</div>
-          <div>@name4</div>
+          <h1>Trending</h1>
+          <div class="trending-container">
+            <div>
+              <div>logo</div>
+              <h2>@name1</h2>
+              <h3>Title</h3>
+            </div>
+            <div>
+              <div>logo</div>
+              <h2>@name2</h2>
+              <h3>Title</h3>
+            </div>
+            <div>
+              <div>logo</div>
+              <h2>@name3</h2>
+              <h3>Title</h3>
+            </div>
+            <div>
+              <div>logo</div>
+              <h2>@name4</h2>
+              <h3>Title</h3>
+            </div>
+          </div>
         </div>
       </div>
     </div>
