Added icons and changed tags for dashboard.html
Added icons in the header and project cards. And then added more semantic html

--- a/dashboard.html
+++ b/dashboard.html
@@ -15,12 +15,10 @@
         <div class="header-top">
           <div class="header-top-search">
             <img src="search.svg">
-            <!-- <div>magnifying glass</div> -->
             <input />
           </div>
           <div class="header-top-profile">
             <img src="bell.svg">
-            <!-- <div>notification bell</div> -->
             <div>prof pic</div>
             <div>Ray Lopez</div>
           </div>
@@ -28,7 +26,8 @@
         <div class="header-bottom">
           <div class="header-bottom-profile">
             <div>bigger prof pic</div>
-            <div>Hi there, Ray Lopez (@ray)</div>
+            <h2>Hi there,</h2>
+            <h1>Ray Lopez (@ray)</h1>
           </div>
           <div class="header-bottom-buttons">
             <button>New</button>
@@ -58,74 +57,74 @@
           <h1>Your Projects</h1>
           <div class="project-card-container">
             <div class="project-card">
-              <div>Project 1</div>
-              <div>Lorem ipsum odor amet, consectetuer adipiscing elit. Per et ex dui eleifend bibendum gravida odio, accumsan nibh.</div>
+              <h2>Project 1</h2>
+              <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Per et ex dui eleifend bibendum gravida odio, accumsan nibh.</p>
               <div class="project-links">
-                <div>star</div>
-                <div>watch</div>
-                <div>link</div>
+                <img src="star-plus-outline.svg">
+                <img src="eye-plus-outline.svg">
+                <img src="source-fork.svg">
               </div>
             </div>
             <div class="project-card">
-              <div>Project 2</div>
-              <div>Praesent a venenatis arcu, vitae imperdiet quam. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </div>
+              <h2>Project 2</h2>
+              <p>Praesent a venenatis arcu, vitae imperdiet quam. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
               <div class="project-links">
-                <div>star</div>
-                <div>watch</div>
-                <div>link</div>
+                <img src="star-plus-outline.svg">
+                <img src="eye-plus-outline.svg">
+                <img src="source-fork.svg">
               </div>
             </div>
             <div class="project-card">
-              <div>Project 3</div>
-              <div>Ut id magna non mi mollis rutrum eu eget nisi. Ut quis risus ante. Pellentesque id enim a dolor luctus laoreet quis quis quam.</div>
+              <h2>Project 3</h2>
+              <p>Ut id magna non mi mollis rutrum eu eget nisi. Ut quis risus ante. Pellentesque id enim a dolor luctus laoreet quis quis quam.</p>
               <div class="project-links">
-                <div>star</div>
-                <div>watch</div>
-                <div>link</div>
+                <img src="star-plus-outline.svg">
+                <img src="eye-plus-outline.svg">
+                <img src="source-fork.svg">
               </div>
             </div>
             <div class="project-card">
-              <div>Project 4</div>
-              <div>Nunc ut pulvinar mauris. Curabitur ac sagittis sapien, in dignissim tortor.</div>
+              <h2>Project 4</h2>
+              <p>Nunc ut pulvinar mauris. Curabitur ac sagittis sapien, in dignissim tortor.</p>
               <div class="project-links">
-                <div>star</div>
-                <div>watch</div>
-                <div>link</div>
+                <img src="star-plus-outline.svg">
+                <img src="eye-plus-outline.svg">
+                <img src="source-fork.svg">
               </div>
             </div>
             <div class="project-card">
-              <div>Project 5</div>
-              <div>Curabitur tristique sodales velit, quis feugiat lacus suscipit nec. Suspendisse vitae mattis ante.</div>
+              <h2>Project 5</h2>
+              <p>Curabitur tristique sodales velit, quis feugiat lacus suscipit nec. Suspendisse vitae mattis ante.</p>
               <div class="project-links">
-                <div>star</div>
-                <div>watch</div>
-                <div>link</div>
+                <img src="star-plus-outline.svg">
+                <img src="eye-plus-outline.svg">
+                <img src="source-fork.svg">
               </div>
             </div>
             <div class="project-card">
-              <div>Project 6</div>
-              <div>Maecenas sit amet vestibulum dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</div>
+              <h2>Project 6</h2>
+              <p>Maecenas sit amet vestibulum dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
               <div class="project-links">
-                <div>star</div>
-                <div>watch</div>
-                <div>link</div>
+                <img src="star-plus-outline.svg">
+                <img src="eye-plus-outline.svg">
+                <img src="source-fork.svg">
               </div>
             </div>
           </div>
         </div>
         <div class="announcements">
-          <div>Annoucements</div>
+          <h1>Annoucements</h1>
           <div class="announcement-container">
             <div>
-              <h1>Annoucement 1</h1>
+              <h2>Annoucement 1</h2>
               <p>Morbi dapibus vitae elit non vestibulum.</p>
             </div>
             <div>
-              <h1>Annoucement 2</h1>
+              <h2>Annoucement 2</h2>
               <p>Aenean semper mi in erat eleifend vestibulum.</p>
             </div>
             <div>
-              <h1>Annoucement 3</h1>
+              <h2>Annoucement 3</h2>
               <p>Quisque laoreet ligula et velit consectetur consequat.</p>
             </div>
           </div>
