Added profile pic and added css for the top header section

--- a/dashboard.html
+++ b/dashboard.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dashboard.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -14,12 +17,12 @@
       <div class="header">
         <div class="header-top">
           <div class="header-top-search">
-            <img src="search.svg">
+            <img src="search.svg" />
             <input />
           </div>
           <div class="header-top-profile">
-            <img src="bell.svg">
-            <div>prof pic</div>
+            <img src="bell.svg" />
+            <img src="profpic.png" class="profile-pic" />
             <div>Ray Lopez</div>
           </div>
         </div>
@@ -58,56 +61,77 @@
           <div class="project-card-container">
             <div class="project-card">
               <h2>Project 1</h2>
-              <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Per et ex dui eleifend bibendum gravida odio, accumsan nibh.</p>
+              <p>
+                Lorem ipsum odor amet, consectetuer adipiscing elit. Per et ex
+                dui eleifend bibendum gravida odio, accumsan nibh.
+              </p>
               <div class="project-links">
-                <img src="star-plus-outline.svg">
-                <img src="eye-plus-outline.svg">
-                <img src="source-fork.svg">
+                <img src="star-plus-outline.svg" />
+                <img src="eye-plus-outline.svg" />
+                <img src="source-fork.svg" />
               </div>
             </div>
             <div class="project-card">
               <h2>Project 2</h2>
-              <p>Praesent a venenatis arcu, vitae imperdiet quam. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+              <p>
+                Praesent a venenatis arcu, vitae imperdiet quam. Orci varius
+                natoque penatibus et magnis dis parturient montes, nascetur
+                ridiculus mus.
+              </p>
               <div class="project-links">
-                <img src="star-plus-outline.svg">
-                <img src="eye-plus-outline.svg">
-                <img src="source-fork.svg">
+                <img src="star-plus-outline.svg" />
+                <img src="eye-plus-outline.svg" />
+                <img src="source-fork.svg" />
               </div>
             </div>
             <div class="project-card">
               <h2>Project 3</h2>
-              <p>Ut id magna non mi mollis rutrum eu eget nisi. Ut quis risus ante. Pellentesque id enim a dolor luctus laoreet quis quis quam.</p>
+              <p>
+                Ut id magna non mi mollis rutrum eu eget nisi. Ut quis risus
+                ante. Pellentesque id enim a dolor luctus laoreet quis quis
+                quam.
+              </p>
               <div class="project-links">
-                <img src="star-plus-outline.svg">
-                <img src="eye-plus-outline.svg">
-                <img src="source-fork.svg">
+                <img src="star-plus-outline.svg" />
+                <img src="eye-plus-outline.svg" />
+                <img src="source-fork.svg" />
               </div>
             </div>
             <div class="project-card">
               <h2>Project 4</h2>
-              <p>Nunc ut pulvinar mauris. Curabitur ac sagittis sapien, in dignissim tortor.</p>
+              <p>
+                Nunc ut pulvinar mauris. Curabitur ac sagittis sapien, in
+                dignissim tortor.
+              </p>
               <div class="project-links">
-                <img src="star-plus-outline.svg">
-                <img src="eye-plus-outline.svg">
-                <img src="source-fork.svg">
+                <img src="star-plus-outline.svg" />
+                <img src="eye-plus-outline.svg" />
+                <img src="source-fork.svg" />
               </div>
             </div>
             <div class="project-card">
               <h2>Project 5</h2>
-              <p>Curabitur tristique sodales velit, quis feugiat lacus suscipit nec. Suspendisse vitae mattis ante.</p>
+              <p>
+                Curabitur tristique sodales velit, quis feugiat lacus suscipit
+                nec. Suspendisse vitae mattis ante.
+              </p>
               <div class="project-links">
-                <img src="star-plus-outline.svg">
-                <img src="eye-plus-outline.svg">
-                <img src="source-fork.svg">
+                <img src="star-plus-outline.svg" />
+                <img src="eye-plus-outline.svg" />
+                <img src="source-fork.svg" />
               </div>
             </div>
             <div class="project-card">
               <h2>Project 6</h2>
-              <p>Maecenas sit amet vestibulum dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+              <p>
+                Maecenas sit amet vestibulum dolor. Pellentesque habitant morbi
+                tristique senectus et netus et malesuada fames ac turpis
+                egestas.
+              </p>
               <div class="project-links">
-                <img src="star-plus-outline.svg">
-                <img src="eye-plus-outline.svg">
-                <img src="source-fork.svg">
+                <img src="star-plus-outline.svg" />
+                <img src="eye-plus-outline.svg" />
+                <img src="source-fork.svg" />
               </div>
             </div>
           </div>
