added profile pic for the bottom of the header. Changed header-bottom to flex also made the header-bottom-buttons container to be flex

--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@
         </div>
         <div class="header-bottom">
           <div class="header-bottom-profile">
-            <div>bigger prof pic</div>
+            <img src="profpic.png" class="big-profile-pic" />
             <h2>Hi there,</h2>
             <h1>Ray Lopez (@ray)</h1>
           </div>
