Fixed Announcement typo and changed Dashboard heading tag

--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="dashboard">
-        <div>Dashboard</div>
+        <h1>Dashboard</h1>
         <ul>
           <li>Home</li>
           <li>Profile</li>
@@ -137,18 +137,18 @@
           </div>
         </div>
         <div class="announcements">
-          <h1>Annoucements</h1>
+          <h1>Announcements</h1>
           <div class="announcement-container">
             <div>
-              <h2>Annoucement 1</h2>
+              <h2>Announcement 1</h2>
               <p>Morbi dapibus vitae elit non vestibulum.</p>
             </div>
             <div>
-              <h2>Annoucement 2</h2>
+              <h2>Announcement 2</h2>
               <p>Aenean semper mi in erat eleifend vestibulum.</p>
             </div>
             <div>
-              <h2>Annoucement 3</h2>
+              <h2>Announcement 3</h2>
               <p>Quisque laoreet ligula et velit consectetur consequat.</p>
             </div>
           </div>
